# time_management

./: CMakeLists.txt
include/: achievement.h  data.h  trash.h
src/: achievement.c  data.c  main.c  trash.c
